--- a/data-raw/inst/Markdown/Report_TS_Mdls.Rmd
+++ b/data-raw/inst/Markdown/Report_TS_Mdls.Rmd
@@ -50,7 +50,7 @@ params:
   outp_smry_ls: !r NULL
   output_type_1L_chr: HTML
   rltv_path_to_data_dir_1L_chr: ../Output/F_TS_Mdls
-  subtitle_1L_chr: "Catalogue of time series models"
+  subtitle_1L_chr: "Catalogue of longitudinal models"
   root_dir_1L_chr: ./
   section_type_1L_chr: "#"
 subtitle: "`r params$subtitle_1L_chr`"
